# valadoc

./: Makefile.am  configure.ac
src/doclets/devhelp/: Makefile.am
src/doclets/gtkdoc/: Makefile.am
src/doclets/html/: Makefile.am  doclet.vala
src/driver/0.20.x/: Makefile.am
src/driver/0.22.x/: Makefile.am
src/driver/0.24.x/: Makefile.am
src/driver/0.26.x/: Makefile.am
src/driver/0.28.x/: Makefile.am
src/driver/0.30.x/: Makefile.am
src/driver/0.32.x/: Makefile.am
src/libvaladoc/: Makefile.am  filehelper.vala
src/libvaladoc/html/: basicdoclet.vala
web-assets/: Makefile.am
web-assets/styles/: style.css
