NULL =

assetsdir = $(datadir)/valadoc/web-assets

dist_assets_DATA = \
	images/abstractclass.png \
	images/abstractmethod.png \
	images/abstractproperty.png \
	images/class.png \
	images/coll_close.png \
	images/coll_open.png \
	images/constant.png \
	images/constructor.png \
	images/delegate.png \
	images/enum.png \
	images/enumvalue.png \
	images/errorcode.png \
	images/errordomain.png \
	images/field.png \
	images/interface.png \
	images/method.png \
	images/namespace.png \
	images/package.png \
	images/packages.png \
	images/property.png \
	images/signal.png \
	images/staticmethod.png \
	images/struct.png \
	images/tip.png \
	images/virtualmethod.png \
	images/virtualproperty.png \
	images/warning.png \
	scripts/scripts.js \
	styles/wikistyle.css \
	styles/style.css \
	styles/devhelpstyle.css \
	$(NULL)
