NULL =

assetsdir = $(datadir)/valadoc/web-assets

nobase_assets_DATA = \
	images/abstractclass.svg \
	images/abstractmethod.svg \
	images/abstractproperty.svg \
	images/class.svg \
	images/coll_close.svg \
	images/coll_open.svg \
	images/constant.svg \
	images/constructor.svg \
	images/delegate.svg \
	images/enum.svg \
	images/enumvalue.svg \
	images/errorcode.svg \
	images/errordomain.svg \
	images/field.svg \
	images/interface.svg \
	images/method.svg \
	images/namespace.svg \
	images/package.svg \
	images/packages.svg \
	images/property.svg \
	images/signal.svg \
	images/staticmethod.svg \
	images/struct.svg \
	images/tip.png \
	images/virtualmethod.svg \
	images/virtualproperty.svg \
	images/warning.svg \
	scripts/scripts.js \
	styles/style.css \
	styles/devhelpstyle.css \
	$(NULL)
